--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "orchestra/lumen",
     "description": "Lumen Framework for Orchestra Platform",
-    "keywords": ["framework", "laravel", "lumen", "orchestral", "orchestra-platform"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen",
+        "orchestral",
+        "orchestra-platform"
+    ],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/orchestral/lumen/issues",
@@ -27,9 +33,9 @@
     },
     "require": {
         "php": ">=7.2.5",
-        "laravie/api": "^4.0",
+        "laravie/api": "^5.0",
         "nikic/fast-route": "^1.3",
-        "orchestra/foundation": "^5.0"
+        "orchestra/foundation": "^6.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.1",
